[gd_scene load_steps=9 format=3 uid="uid://bst27xarx6b8r"]

[ext_resource type="Script" uid="uid://b0gk878d4axnv" path="res://scenes/GUI/main_game/week_summary/gui_week_summary_main.gd" id="1_bf6q1"]
[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="2_v8dyu"]
[ext_resource type="Texture2D" uid="uid://b0nsc2v1cdqqd" path="res://resources/sprites/GUI/shared/panel_background_simple.png" id="3_l4mju"]
[ext_resource type="Texture2D" uid="uid://b4wijuwglcpg0" path="res://resources/sprites/GUI/shared/border3.png" id="4_bdoyl"]
[ext_resource type="PackedScene" uid="uid://dypjo506mdbnc" path="res://scenes/GUI/main_game/week_summary/gui_summary_item.tscn" id="5_v8dyu"]
[ext_resource type="PackedScene" uid="uid://bgeepmq2eiey4" path="res://scenes/GUI/controls/buttons/gui_rich_text_button.tscn" id="5_yjk5o"]
[ext_resource type="PackedScene" uid="uid://bfye3pwakcidx" path="res://scenes/GUI/shared/descriptions/gui_tooltip_description_separator.tscn" id="6_l4mju"]
[ext_resource type="PackedScene" uid="uid://dm1jpn72n0ue7" path="res://scenes/GUI/main_game/top_bar/gui_gold.tscn" id="7_kv3qy"]

[node name="GUIWeekSummaryMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bf6q1")

[node name="GUIOverlayBackground" parent="." instance=ExtResource("2_v8dyu")]
layout_mode = 1
color = Color(0, 0, 0, 0.862745)

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(120, 82)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 27.0
offset_right = 41.0
offset_bottom = 109.0
grow_horizontal = 2

[node name="Background" type="NinePatchRect" parent="MainPanel"]
self_modulate = Color(0.396078, 0.45098, 0.572549, 1)
layout_mode = 2
texture = ExtResource("3_l4mju")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Border" type="NinePatchRect" parent="MainPanel"]
self_modulate = Color(0.0745098, 0.0745098, 0.0745098, 1)
layout_mode = 2
texture = ExtResource("4_bdoyl")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Titles" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Title" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Titles"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD"
text = "Week Summary"
horizontal_alignment = 1

[node name="ItemsContainer" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="DaysLeftLabel" parent="MainPanel/MarginContainer/VBoxContainer/ItemsContainer" instance=ExtResource("5_v8dyu")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
title_localized_string = "WEEK_SUMMARY_DAYS_LEFT_TITLE"

[node name="Spacer" type="Control" parent="MainPanel/MarginContainer/VBoxContainer/ItemsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GUITooltipDescriptionSaparator" parent="MainPanel/MarginContainer/VBoxContainer/ItemsContainer" instance=ExtResource("6_l4mju")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="GUIGold" parent="MainPanel/MarginContainer/VBoxContainer/ItemsContainer" instance=ExtResource("7_kv3qy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
label_alignment = 2

[node name="ContinueButton" parent="." instance=ExtResource("5_yjk5o")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -32.0
offset_right = 15.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
localization_text_key = "WEEK_SUMMARY_SUCCESS_BUTTON"

[node name="ItemAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
volume_db = 10.0
bus = &"SFX"
